# django-blog

./: .gitignore  Makefile  db.sqlite3  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/articles/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/articles/migrations/: 0001_initial.py  0002_article_author.py  0003_articlecomment.py
hexlet_django_blog/templates/: base.html
hexlet_django_blog/templates/articles/: comment.html  create.html  delete.html  index.html  show.html  update.html
